# NANE

./: .gitignore  README.md  TODO.txt  deploy.sh
LogServer/: CMakeLists.txt
LogServer/src/: main.cpp
LogServer/src/network/: Logger_server.cpp  Logger_server.h
NANE-Desktop/: CMakeLists.txt
NANE-Switch/: Makefile
NANE/src/: main.cpp
NANE/src/GameEngine/: GameEngine.cpp  GameEngine.h  main.cpp
NANE/src/GameEngine/Audio/: AudioMgr.cpp  AudioMgr.h
NANE/src/GameEngine/Graphics/: Button.cpp  Button.h  CustomEventMgr.cpp  CustomEventMgr.h  FileNavigator.cpp  FileNavigator.h  FontManager.cpp  FontManager.h  GraphicsEngine.cpp  GraphicsEngine.h  IWindow.cpp  IWindow.h  MenuBar.cpp  MenuBar.h  MenuButton.cpp  MenuButton.h  PushButton.cpp  PushButton.h  SubMenu.cpp  SubMenu.h  TextWindow.cpp  TextWindow.h  TextureWindow.cpp  TextureWindow.h  ToggleButton.cpp  ToggleButton.h  Window.cpp  Window.h  WindowsManager.cpp  WindowsManager.h
NANE/src/GameEngine/Input/: KeyMapper.cpp  KeyMapper.h
NANE/src/GameEngine/Network/: Logger.cpp  Logger.h
NANE/src/GameEngine/Storage/: FileSystem.cpp  FileSystem.h  RomLoader.cpp  RomLoader.h
NANE/src/GameEngine/Utils/: FpsTimer.cpp  FpsTimer.h
NANE/src/NES/: Nes.cpp  Nes.h
NANE/src/NES/APU/: Apu.cpp  Apu.h  ApuMemoryMap.cpp  ApuMemoryMap.h  ApuRegisters.cpp  ApuRegisters.h  IWave.cpp  IWave.h  NoiseWave.cpp  NoiseWave.h  Sequencer.cpp  Sequencer.h  SquareWave.cpp  SquareWave.h  TriangleWave.cpp  TriangleWave.h  VolumeEnvelope.cpp  VolumeEnvelope.h  filters.h
NANE/src/NES/CPU/: Cpu.cpp  Cpu.h  CpuMemoryMap.cpp  CpuMemoryMap.h  CpuRegisters.cpp  CpuRegisters.h  InstructionSet.cpp  InstructionSet.h  Instructions.h  overload_macro.h
NANE/src/NES/Cartridge/: CartridgeLoader.cpp  CartridgeLoader.h  INes.cpp  INes.h
NANE/src/NES/Cartridge/CartridgeMapping/: CartridgeMapping0.cpp  CartridgeMapping0.h  ICartridge.cpp  ICartridge.h
NANE/src/NES/Controller/: ControllerManager.cpp  ControllerManager.h  NesController.cpp  NesController.h
NANE/src/NES/Memory/: BitUtil.cpp  BitUtil.h  Dma.cpp  Dma.h  IMemoryR.cpp  IMemoryR.h  IMemoryRW.cpp  IMemoryRW.h  IMemoryRepeater.cpp  IMemoryRepeater.h  Matrix.h  MemoryRepeater.cpp  MemoryRepeater.h  MemoryRepeaterArray.cpp  MemoryRepeaterArray.h  MemoryRepeaterVec.cpp  MemoryRepeaterVec.h  ThreadSafeQueue.h  Types.h
NANE/src/NES/PPU/: ColourPalettes.cpp  ColourPalettes.h  Matrix.h  NameTables.cpp  NameTables.h  NesColour.cpp  NesColour.h  Oam.cpp  Oam.h  OamPrimary.cpp  OamPrimary.h  OamSecondary.cpp  OamSecondary.h  PatternTables.cpp  PatternTables.h  Ppu.cpp  Ppu.h  PpuMemoryMap.cpp  PpuMemoryMap.h  PpuRegisters.cpp  PpuRegisters.h  Screen.cpp  Screen.h
NANE/src/NES/ROM/: INes.h  INesParser.cpp  INesParser.h
NANE/src/NES/ROM/CartridgeMapping/: CartridgeMapping0.cpp  CartridgeMapping0.h  ICartridge.h
NANE/src/NES/Util/: BitUtil.cpp  BitUtil.h
NANE/test/: test_main.cpp
NANE/test/NES/APU/: ApuRegistersTest.cpp
NANE/test/NES/CPU/: CpuMemoryMapTest.cpp  CpuRegistersTest.cpp  CpuTest.cpp
NANE/test/NES/Cartridge/: CartridgeLoaderTest.cpp  INesParserTest.cpp  NesTestdata.h
NANE/test/NES/Controller/: ControllerManagerTest.cpp  NesControllerTest.cpp
NANE/test/NES/Memory/: BitUtilTest.cpp  DmaTest.cpp  MatrixTest.cpp  MemoryRepeater.cpp  TypesTest.cpp
NANE/test/NES/PPU/: ColourPalettesTest.cpp  NameTablesTest.cpp  OamPrimaryTest.cpp  OamSecondaryTest.cpp  PatternTablesTest.cpp  PpuMemoryMapTest.cpp  PpuRegistersTest.cpp  PpuTest.cpp
NANE/test/NES/ROM/: INesParserTest.cpp
NANE/test/NES/Util/: BitUtilTest.cpp
NANE/test/resources/: nettest_logs.txt
NES-Desktop/: CMakeLists.txt
NES-Switch/: Makefile
NES/source/: GameEngine.cpp  GameEngine.h  main.cpp
NES/source/graphics/: GraphicsEngine.cpp
NES/source/network/: Logger.cpp  Logger.h
desktop/: CMakeLists.txt
desktop/source/: main.cpp
desktop/source/network/: Logger_server.cpp  Logger_server.h
log_server/: CMakeLists.txt
log_server/source/: main.cpp
switch/: Makefile
switch/source/: GameEngine.cpp  GameEngine.h  main.cpp
switch/source/graphics/: GraphicsEngine.h
switch/source/network/: Logger.cpp  Logger.h
